 - [web] SOGoCalendarWeekdays must now be defined before saving preferences
 - [web] fixed CAS session timeout handling during XHR requests (#1456)
 - [web] exposed default value of SOGoMailAutoSave (#4053)
 - [web] fixed handling of contact organizations (#4028)
 - [web] fixed handling of attachments in mail editor (#4058, #4063)
 - [web] fixed saving draft outside Mail module (#4071)

3.2.7 (2017-02-14)
------------------

New features
 - [core] new sogo-tool checkup command to make sure user's data is sane

Enhancements
 - [web] added Hebrew (he) translation - thanks to Raz Aidlitz

Bug fixes
 - [core] generalized the bcc handling code 
 - [web] saving the preferences was not possible when Mail module is disabled
 - [web] ignore mouse events in scrollbars of Month view (#3990)
 - [web] fixed public URL with special characters (#3993)
 - [web] keep the fab button visible when the center list is hidden
 - [web] localized mail, phone, url and address types (#4030)
 - [eas] improved EAS parameters parsing (#4003)
 - [eas] properly handle canceled appointments

3.2.6a (2017-01-26)
-------------------

Bug fixes
 - [core] fixed "include in freebusy" (reverts #3354)
 - [web] improved ACLs handling of inactive users

3.2.6 (2017-01-23)
------------------

Enhancements
 - [web] show locale codes beside language names in Preferences module
 - [web] fixed visual glitches in Month view with Firefox
 - [web] mail editor can now be expanded horizontally and automatically expands vertically
 - [web] compose a new message inline or in a popup window
 - [web] allow to select multiple files when uploading attachments (#3999)
 - [web] use "date" extension of Sieve to enable/disable vacation auto-reply (#1530, #1949)
 - [web] updated Angular to version 1.6.1
 - [web] updated CKEditor to version 4.6.2

Bug fixes
 - [core] remove all alarms before sending IMIP replies (#3925)
 - [web] fixed rendering of forwared HTML message with inline images (#3981)